@@ -22,6 +22,7 @@ package org.apache.cayenne.access.types;
 import java.sql.CallableStatement;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
+import java.util.Objects;
 
 /**
  * @since 4.0
@@ -45,19 +46,19 @@ public class ValueObjectTypeFactory implements ExtendedTypeFactory {
         if(valueObjectType == null) {
             return null;
         }
-        ExtendedType<?> decorator = map.getExplictlyRegisteredType(valueObjectType.getTargetType().getName());
+        ExtendedType<?> decorator = map.getExplictlyRegisteredType(valueObjectType.getTargetType().getCanonicalName());
 
         return new ExtendedTypeConverter(decorator, valueObjectType);
     }
 
     static class ExtendedTypeConverter<T, E> implements ExtendedType<T> {
 
-        private ExtendedType<E> extendedType;
-        private ValueObjectType<T, E> valueObjectType;
+        ExtendedType<E> extendedType;
+        ValueObjectType<T, E> valueObjectType;
 
         ExtendedTypeConverter(ExtendedType<E> extendedType, ValueObjectType<T, E> valueObjectType) {
-            this.extendedType = extendedType;
-            this.valueObjectType = valueObjectType;
+            this.extendedType = Objects.requireNonNull(extendedType);
+            this.valueObjectType = Objects.requireNonNull(valueObjectType);
         }
 
         @Override
