@@ -19,10 +19,11 @@ CAY-2364 Wrong logging in SQLTemplate
 CAY-2365 SQLExec query tries to convert (unexpected) result set into objects
 CAY-2367 ClassCastException reading object with an attribute of type 'char'
 CAY-2368 ColumnSelect: Property.self() translates into wrong SQL code
+CAY-2370 ValueObjectType for byte[] fails lookup
 
 ----------------------------------
 Release: 4.0.B2
-Date:
+Date: October 06, 2017
 ----------------------------------
 
 Bug Fixes:
